--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-jasmine": "^2.3.0",
-    "jasmine": "^2.4.1"
+    "gulp-shell": "^0.5.2",
+    "run-sequence": "^1.1.5"
   }
 }
