--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-jasmine": "^2.3.0",
     "gulp-shell": "^0.5.2",
     "run-sequence": "^1.1.5"
