--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Pedro Lucas da Silva Junior <pedro@objota.com.br>",
   "license": "MIT",
   "dependencies": {
+    "extend": "^3.0.0",
     "java": "^0.6.1"
   },
   "devDependencies": {
