--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "extend": "^3.0.0",
-    "java": "^0.6.1"
+    "java": "^0.6.1",
+    "when": "^3.7.7"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
