--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "postinstall": "node post-install"
   },
   "keywords": [
     "pdf",
