--- a/.classpath
+++ b/.classpath
@@ -1,1 +1,31 @@
-.:./src-library/*
+<?xml version="1.0" encoding="UTF-8"?>
+<classpath>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="test" value="true"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="src-library/jai-imageio-core-1.3.1.jar"/>
+	<classpathentry kind="lib" path="src-library/jai-imageio-jpeg2000-1.3.0.jar"/>
+	<classpathentry kind="lib" path="src-library/levigo-jbig2-imageio-1.6.5.jar"/>
+	<classpathentry kind="lib" path="src-library/pdfbox.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
+</classpath>
